fix: problem answer layout squishes delete button background

--- a/src/editors/containers/ProblemEditor/components/EditProblemView/AnswerWidget/index.scss
+++ b/src/editors/containers/ProblemEditor/components/EditProblemView/AnswerWidget/index.scss
@@ -20,3 +20,15 @@
     }
   }
 }
+
+.answer-option-flex-item-1 {
+  flex-basis: 8.33%;
+}
+
+.answer-option-flex-item-2 {
+  flex-basis: 83.34%;
+}
+
+.answer-option-flex-item-3 {
+  flex-basis: 8.33%;
+}
